--- a/Day 11/index.html
+++ b/Day 11/index.html
@@ -48,7 +48,7 @@
         />
       </form>
       <div class="button-container">
-        <button class="create">Create</button>
+        <button type="submit" form="url-form" class="create">Create</button>
         <button class="advanced">Advanced</button>
       </div>
     </section>
@@ -88,12 +88,12 @@
         <div class="social-containers">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
+            width="30"
+            height="30"
             viewBox="0 0 24 24"
             fill="none"
             stroke="currentColor"
-            stroke-width="2"
+            stroke-width="1.5"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="icon icon-tabler icons-tabler-outline icon-tabler-brand-facebook"
@@ -105,12 +105,12 @@
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
+            width="30"
+            height="30"
             viewBox="0 0 24 24"
             fill="none"
             stroke="currentColor"
-            stroke-width="2"
+            stroke-width="1.5"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="icon icon-tabler icons-tabler-outline icon-tabler-brand-twitter"
