--- a/Day 13/index.html
+++ b/Day 13/index.html
@@ -16,10 +16,10 @@
     <div class="main-container">
       <section class="main-card">
         <div class="main-card_info">
-          <h1>Keep it sporty</h1>
+          <h1>Keep it sporty.</h1>
           <p>
-            Our mission is to change the world through sport. Browse sportswear
-            and shoes.
+            Our mission is to change the world through sport. <br />
+            sportswear and shoes.
           </p>
           <button class="btn">View Collection</button>
         </div>
