--- a/Day 14/index.html
+++ b/Day 14/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Statistic Website</title>
+    <title>Statistics Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,15 +19,15 @@
         <p class="search-container">
           <svg
             xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-search"
             width="24"
             height="24"
             viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="#b5b5b5"
             fill="none"
-            stroke="currentColor"
-            stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="icon icon-tabler icons-tabler-outline icon-tabler-search"
           >
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
@@ -35,15 +35,15 @@
           </svg>
           <input
             type="search"
-            id="search"
             name="search"
+            id="search"
             placeholder="Enter any keyword"
           />
         </p>
       </form>
-      <div class="statistic-container">
-        <section class="statistic">
-          <h2>Price Calculator</h2>
+      <div class="statistics-container">
+        <section class="statistics">
+          <h2>Price calculator</h2>
           <p>
             How much does 1 Eur in 1963 equal in today's prices? Adjust the
             rent?
@@ -52,59 +52,58 @@
             Calculate price changes
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
+              class="icon icon-tabler icon-tabler-chevron-right"
+              width="20"
+              height="20"
               viewBox="0 0 24 24"
-              fill="none"
+              stroke-width="1.5"
               stroke="currentColor"
-              stroke-width="2"
+              fill="none"
               stroke-linecap="round"
               stroke-linejoin="round"
-              class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-right"
             >
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
               <path d="M9 6l6 6l-6 6" />
             </svg>
           </button>
         </section>
-        <section class="statistic">
-          <h2>Name Statistics</h2>
+        <section class="statistics">
+          <h2>Name statistics</h2>
           <p>Find names with different statistics.</p>
           <button>
-            Search by name
-            <svg
+            Search by Name<svg
               xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
+              class="icon icon-tabler icon-tabler-chevron-right"
+              width="20"
+              height="20"
               viewBox="0 0 24 24"
-              fill="none"
+              stroke-width="1.5"
               stroke="currentColor"
-              stroke-width="2"
+              fill="none"
               stroke-linecap="round"
               stroke-linejoin="round"
-              class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-right"
             >
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
               <path d="M9 6l6 6l-6 6" />
             </svg>
           </button>
         </section>
-        <section class="statistic">
-          <h2>Stats Table</h2>
+        <section class="statistics">
+          <h2>Stats table</h2>
           <p>Find detailed tables with time and create your own.</p>
           <button>
             Go to tables
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
+              class="icon icon-tabler icon-tabler-chevron-right"
+              width="20"
+              height="20"
               viewBox="0 0 24 24"
-              fill="none"
+              stroke-width="1.5"
               stroke="currentColor"
-              stroke-width="2"
+              fill="none"
               stroke-linecap="round"
               stroke-linejoin="round"
-              class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-right"
             >
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
               <path d="M9 6l6 6l-6 6" />
@@ -128,6 +127,6 @@
         </section>
       </div>
     </main>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
